Hit-testing does not account for clip-path set on parent of <iframe> https://bugs.webkit.org/show_bug.cgi?id=226499 <rdar://problem/77317612>

Reviewed by Simon Fraser.

Source/WebCore:

Before considering hit-testing children layers, we should ensure that the current RenderLayer doesn't have styles
set on its renderer that would clip the layer in such a way that the hit test location wouldn't yield a positive
result.

Tests: css3/masking/clip-path-hit-test-on-absolute-position-iframe-parent.html
       css3/masking/clip-path-hit-test-on-iframe-parent.html

* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::hitTestLayer):

LayoutTests:

Add new tests checking that we don't hit-tests elements when the location is
part of an <iframe> clipped by the clip-path property set on a parent element.
We test the case where the <iframe> has `position: absolute` as well as the
default `position`.or https://bugs.webkit.org/show_bug.cgi?id=226499

* css3/masking/clip-path-hit-test-on-absolute-position-iframe-parent-expected.txt: Added.
* css3/masking/clip-path-hit-test-on-absolute-position-iframe-parent.html: Added.
* css3/masking/clip-path-hit-test-on-iframe-parent-expected.txt: Added.
* css3/masking/clip-path-hit-test-on-iframe-parent.html: Added.


Canonical link: https://commits.webkit.org/238404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278377 268f45cc-cd09-0410-ab3c-d52691b4dbfc